Bug 1352772 - Send permissions to the content process before dispatching push events, r=catalinb

MozReview-Commit-ID: DVLjumi9iBJ